a few tweaks to make it behave like our current origin service
